--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
     primaryBtnText="Login Now"
     secundaryBtnText="Signup Now"
 >
-    <form>
-        <p>OLA</p>
+    <form [formGroup]="loginForm">
+        <app-primary-input></app-primary-input>
     </form>
 </app-default-login-layout>
