--- a/src/app/components/primary-input/primary-input.component.html
+++ b/src/app/components/primary-input/primary-input.component.html
@@ -1,10 +1,11 @@
-<div class="input-weapper">
-    <label [for]="formName">{{ label }}</label>
+<div class="input-wrapper">
+    <label [for]="inputName">{{ label }}</label>
     <div class="input-content">
         <input 
             [type]="type" 
-            [formControlName]="formName"
-            [placeholder]="placeholder"   
+            [placeholder]="placeholder"
+            [value]="value"
+            (input)="onInput($event)"
         />
         <div class="icon">
             <ng-content></ng-content>
@@ -12,3 +13,4 @@
     </div>
    
 </div>
+
